# Habit-Tracker

./: README.md  pyproject.toml
src/: habit_classes.py
src/habit_tracker/: trackers_main_classes.py
src/habit_tracker/models/: data_base.py  fastapi_model.py  habits.db
src/habit_tracker/mood_analyzer/: mood_analyzer.py
src/habit_tracker/motivation/: motivation.py  motivation_quotes.json
src/habit_tracker/visualisation/: graphics.py
tests/: test_motivation.py  test_trackers_main_classes.py
