[project]
name = "habit-tracker"
version = "0.1.0"
description = "Habit Tracker for users"
authors = [
    {name = "AlisaKarpova"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
