[project]
name = "habit-tracker"
version = "0.1.0"
description = "Habit Tracker for users"
authors = [
    {name = "AlisaKarpova"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
include = 'src'
exclude = 'tests'
skip-string-normalization = true

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true

[tool.flake8]
line-length = 88
select = ["E", "W", "F"]
